13.12-discutindo-sobre-onde-implementar-as-consultas-com-dados-agregados